# Zakupkihack2022

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  alembic.ini  fill_database.py  pyproject.toml
backend/app/: config.py  main.py  utils.py
backend/app/database/: __init__.py  base.py  tables.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 20785e475b2e_init.py  ba09a1030df2_init.py
backend/app/models/: __init__.py  auth.py  category.py  good.py
backend/app/routers/: __init__.py  auth.py  category.py  companies.py  good.py
backend/app/services/: auth.py  base.py  category.py  good.py  goods_elasticserach_mixin.py  user.py
compose/backend/: Dockerfile
compose/frontend/: Dockerfile
compose/nginx/: foxhound.conf  nginx.conf
data/: data_analysis.py  scraping_nlp.ipynb  table_processing.ipynb
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  consts.js  helpers.js  http.js  main.js  store.js
frontend/src/components/: Categories.vue  FilterLeftSide.vue  NavBar.vue  PriceChart.vue
frontend/src/components/cards/: AddCompanyGoodCard.vue  CompanyCard.vue  GoodCard.vue  ListCompanyCard.vue  ListGoodCard.vue
frontend/src/components/fields/: SearchField.vue
frontend/src/components/filters/: CheckBoxFilter.vue  RangeFilter.vue  (+1 more)
frontend/src/router/: index.js
frontend/src/views/: AddGood.vue  Catalog.vue  CompanyGoods.vue  CompanyInfo.vue  GoodInfo.vue  Index.vue  Login.vue  ModerateCategories.vue  ModerateGoods.vue  Search.vue  SearchCompany.vue
(+6 files in other folders)
